# Milk-API

./: .env.docker.example  .env.example  .gitignore  AUDIT_REPORT.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: cd-production.yml  cd-staging.yml  ci.yml  frontend-ci.yml
alembic/: env.py
alembic/versions/: 20260310_0001_init_core.py  20260310_0002_api_key_hash_len_255.py  20260310_0003_encrypt_webhook_secrets.py  20260310_0004_reports_async_jobs.py  20260310_0005_sync_runs.py
app/: config.py  main.py
app/api/: health.py
app/connectors/: __init__.py  base.py  bpra.py  eardhi.py
app/core/: audit.py  encryption.py  middleware.py  rate_limiter.py  security.py
app/data/: mainland_seed.py  zanzibar_seed.py
app/db/: base.py  session.py
app/models/: __init__.py  api_key.py  api_user.py  audit_log.py  base.py  dispute.py  enums.py  ownership.py  payment.py  property.py  report.py  risk_score.py  sync_run.py  valuation.py  webhook.py  zone.py
app/schemas/: admin.py  auth.py  common.py  identify.py  ownership.py  property.py  reports.py  risk.py
app/services/: auth_service.py  geo_service.py  geocoding_service.py  ownership_service.py  (+5 more)
docs/: api-guide.md
frontend/: .env.local.example  .eslintrc.json  .prettierrc  jest.config.ts  jest.setup.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
scripts/: generate_api_key.py  migrate_encryption_key.py  seed_data.py  seed_sqlite.py  setup_db.py  setup_db.sql  sync_providers.py
tests/: conftest.py
(+88 files in other folders)
